# advanced-app-tracker

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app_tracker/: __init__.py  __main__.py  app.py  config.py  logging_setup.py  paths.py
app_tracker/core/: __init__.py  database.py  idle_detector.py  productivity.py  tracker.py
app_tracker/platform_support/: __init__.py  active_window.py  active_window_wayland.py  autorun.py  launch.py
app_tracker/resources/: __init__.py
app_tracker/security/: __init__.py  guardian.py  guardian_helper.py  passwords.py
app_tracker/ui/: __init__.py  dialogs.py  graphs.py  main_window.py  theme.py
app_tracker/utils/: __init__.py  formatting.py  timeutil.py
tests/: test_database.py  test_formatting.py  test_passwords.py  test_productivity.py  test_timeutil.py
tools/: make_icon.py
